--- a/src/app/client/thanks/thanks.component.html
+++ b/src/app/client/thanks/thanks.component.html
@@ -1,12 +1,12 @@
 <div class="row background">
   <div class="col-12 mt-5">
     <h3 class="text-center mt-5">Thanks!</h3>
-    <p class="text-center">An email will be sent to the registered address.</p>
+    <p class="text-center">An email will be sent to the registered email address to update password.</p>
   </div>
   <form class="col-12 mt-5 text-center">
 
     <div class="offset-md-3 col-md-6 col-xs-12">
-      <button type="submit" class="btn btn1 btn-block p-3">SIGN IN</button>
+      <button  class="btn btn1 btn-block p-3" routerLink="/login">SIGN IN</button>
     </div>
 
   </form>
