--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -2,15 +2,18 @@
 <div class="row">
   <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-2">
     <div class="col-md-12 p-2 ">
-      <h3 class="text-center text-white">Welcome , {{(data | async)?.displayName | titlecase}}!</h3>
+      <h3 class="text-center text-white">Welcome , {{auth.displayName}}!</h3>
   
       <p class="text-center text-white">placeorder</p>
-      <p class="text-center text-white">placeorder</p>
+   
+      
     </div>
   </div>
 </div>
 <div class="row">
     <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    
+   
           <div class="row  m-lg-3 m-md-5 my-5">
             <div class="col-xd col-6 ">
               <div class="position-absolute" style="right:0"></div>
