--- a/src/app/client/address/address.component.css
+++ b/src/app/client/address/address.component.css
@@ -2,10 +2,11 @@
     border: 2px solid;
 }
 
+
 h4{
-    color:#fff; 
-}
-p{
     color:#f1875b;
-    font-size: 1.5rem;
+    
+}
+h5{
+    color:#d5d5d5;
 }
