--- a/src/app/client/address/address.component.html
+++ b/src/app/client/address/address.component.html
@@ -1,17 +1,18 @@
+ <app-navbar></app-navbar>
  <div class="row mb-5">
   <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-    <div class="col-md-12 p-2 ">
-          <h4 class="text-center p-3">New Order > First Unit</h4>
-          <p class="text-center p-3">Property Address </p>
+    <div class="col-md-12">
+          <h3 class="text-center text-white">New Order > First Unit</h3>
+          <h4 class="text-center">Property Address </h4>
     </div>
     <div class="row">
       <div class="col-md-4 col-4 text-left">
-          <h4>BACK</h4>
+          <h5 class="text-white">BACK</h5>
       </div>
       <div class="col-md-4 col-4 text-center">
         </div>
       <div class="col-md-4 col-4 text-right">
-        <h4>NEXT</h4>
+        <h5 class="text-white">NEXT</h5>
       </div>
     </div>
     </div>
@@ -37,4 +38,5 @@
             <input type="text" name="Unit Number" placeholder="Unit Number" class="form-control p-4 numinput text-center">
           </div>
           </div>
+          <app-footer></app-footer>
                  
