--- a/src/app/client/profile/profile.component.html
+++ b/src/app/client/profile/profile.component.html
@@ -1,3 +1,31 @@
-<p>
-  profile works!
-</p>
+<div class="row">
+  <nav class="navbar navbar-expand-md offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav mx-auto my-2 nav-fill w-75">
+            <li class="nav-item ">
+                <a class="nav-link" routerLink="/main">Main</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" routerLink="/">Price Menu</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" routerLink="/placeorder">Place Order</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link ">My Orders</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link ">Agent</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link ">Admin</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link  ">Profile </a>
+              </li>  
+              
+        </ul>
