--- a/src/app/client/revieworder/revieworder.component.html
+++ b/src/app/client/revieworder/revieworder.component.html
@@ -1,3 +1,19 @@
-<p>
-  revieworder works!
-</p>
+<app-navbar></app-navbar>
+<div class="row">
+  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="col-md-12">
+          <h3 class="text-center text-white">New Order > First Unit</h3>
+          <h4 class="text-center">Property Size </h4>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-4 text-left">
+              <h5 class="text-white">BACK</h5>
+          </div>
+        </div>
+        </div>
+        </div>
+        <div class="row text-center mb-3">
+          <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+            <h3>All set?Please review your order below</h3>
+          </div>
+        </div>
