--- a/src/app/admin/adminheader/adminheader.component.html
+++ b/src/app/admin/adminheader/adminheader.component.html
@@ -7,7 +7,7 @@
              
         
         <li class="nav-item">
-          <a class="nav-link" routerLink="/agent-login">
+          <a class="nav-link" routerLink="/admin-login">
             <i class="fa fa-fw fa-sign-out"></i>Logout</a>
         </li>
       </ul>
