--- a/src/app/admin/payment/payment.component.html
+++ b/src/app/admin/payment/payment.component.html
@@ -3,13 +3,13 @@
   <br>
  
  <div class="row mt-4 ">
-     <div class="d-none d-md-block d-lg-block d-xl-block col-md-3  sidenav">
+     <div class="d-none d-md-block d-lg-block d-xl-block col-md-3 sidenav">
          <app-adminsidenav></app-adminsidenav>
      </div>
-     <div class="col-md-9 col-sm-12 my-2 bg-light">
+     <div class="col-md-9 col-sm-12 my-3 bg-light">
          <div class="row ">
            <div class="col-md-12 p-1 bg-white">
-               <h3 class="text-dark">Users</h3>
+               <h3 class="text-dark">Payment</h3>
            </div>
        
          </div>
