--- a/src/app/agent/agentdashboard/agentdashboard.component.html
+++ b/src/app/agent/agentdashboard/agentdashboard.component.html
@@ -3,25 +3,25 @@
 <br>
 
 <div class="row mt-4 ">
-   <div class="d-none d-md-block d-lg-block d-xl-block col-md-3 my-2 sidenav">
+   <div class="d-none d-md-block d-lg-block d-xl-block col-md-3  sidenav">
        <app-adminsidenav></app-adminsidenav>
    </div>
    <div class="col-md-9 col-sm-12 my-2 bg-dark">
     <div class="row mt-5">
         <div class="col-md-6 col-lg-3">
-            <a class="nav-link" routerLink="/admin-users" >
+            <a class="nav-link" routerLink="/aduser" >
           <div class="widget-small primary coloured-icon">
              
             <i class="icon fa fa-users fa-3x"></i>
             
             <div class="info">
-              <h4>Users</h4>
-              <p><b>5</b></p>
+             <h4 routerLink="/aduser">Users</h4>
+            <p><b>5</b></p>
             </div>
           </div>
           </a>
         </div>
-        <div class="col-md-6 col-lg-3"><a class="nav-link" routerLink="/admin-orders" >
+        <div class="col-md-6 col-lg-3"><a class="nav-link" routerLink="/adorders" >
           <div class="widget-small info coloured-icon">
               
             <i class="icon fa fa-first-order fa-3x"></i>
@@ -45,7 +45,7 @@
           </div></a>
         </div>
         <div class="col-md-6 col-lg-3">
-            <a class="nav-link" routerLink="/admin-payment" >
+            <a class="nav-link" routerLink="/adpayment" >
           <div class="widget-small danger coloured-icon">
               
                 <i class="icon fa fa-credit-card fa-3x"></i>
