--- a/src/app/agent/agentregister/agentregister.component.html
+++ b/src/app/agent/agentregister/agentregister.component.html
@@ -64,36 +64,36 @@
       
         </form>
       </mat-step>
-  <mat-step [stepControl]="secondFormGroup" [editable]="isEditable">
-    <form [formGroup]="secondFormGroup" class="row mx-auto">
-      <ng-template matStepLabel>Step 2</ng-template>
-      <div class="row">
-          <div class="col-xs-12 col-sm-12">
-              <mat-form-field class="w-100">
-                  <input matInput placeholder="Street" formControlName="secondCtrl" required >
-              </mat-form-field>
-          </div>
-        </div>
-          <div class="row">
-              <div class="col-xs-12 col-sm-4">
-                  <mat-form-field class="w-100">
-                      <input matInput placeholder=" City" formControlName="secondCtrl" required >
-                  </mat-form-field>
-              </div>
-              <div class="col-xs-12 col-sm-4">
-                  <mat-form-field class="w-100">
-                      <input matInput placeholder="State" formControlName="secondCtrl" required >
-                  </mat-form-field>
-              </div>
-              <div class="col-xs-12 col-sm-4">
-                  <mat-form-field class="w-100">
-                  <input matInput placeholder="ZIP code" formControlName="secondCtrl" required>
-                </mat-form-field>      
-                </div>
+      <mat-step [stepControl]="secondFormGroup" [editable]="isEditable">
+          <form [formGroup]="secondFormGroup">
+            <ng-template matStepLabel>Step 2</ng-template>
+            <div class="row">
+            <div class="col-xs-12 col-sm-12">
+                <mat-form-field class="w-100">
+                    <input matInput placeholder="Street" formControlName="secondCtrl" required >
+                </mat-form-field>
             </div>
+          </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-4">
+                    <mat-form-field class="w-100">
+                        <input matInput placeholder=" City" formControlName="secondCtrl" required >
+                    </mat-form-field>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <mat-form-field class="w-100">
+                        <input matInput placeholder="State" formControlName="secondCtrl" required >
+                    </mat-form-field>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <mat-form-field class="w-100">
+                    <input matInput placeholder="ZIP code" formControlName="secondCtrl" required>
+                  </mat-form-field>      
+                  </div>
+              </div>
           
-      <div class="row ml-3 mx-auto my-3">
-        <button mat-flat-button matStepperNext>Next</button>
+      <div class="row">
+        <button mat-flat-button matStepperNext class="mx-auto">Next</button>
       </div>
     </form>
   </mat-step>
