--- a/src/app/client/placeorder/placeorder.component.html
+++ b/src/app/client/placeorder/placeorder.component.html
@@ -12,23 +12,22 @@
     <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
           <div class="row  m-lg-3 m-md-5 my-5">
             <div class="col-xd col-6 ">
-              <div class="mx-auto col-lg-8 col-12"><img src="/assets/image/icons/pic2.png"  class="img-circle img-fluid" alt="House" ></div>
+              <div class="mx-auto col-lg-8 col-12" routerLink="/address"><img src="/assets/image/icons/pic2.png"  class="img-circle img-fluid" alt="House" ></div>
           
             </div>
             <div class="col-xd col-6 ">
-                     <div class="mx-auto col-lg-8 col-12  "><img src="/assets/image/icons/pic3.png"  class="img-circle img-fluid" alt="Townhome" ></div>
+                     <div class="mx-auto col-lg-8 col-12"routerLink="/address"><img src="/assets/image/icons/pic3.png"  class="img-circle img-fluid" alt="Townhome" ></div>
           
             </div>
           </div>
           <div class="row m-lg-3 m-md-5 my-5">
-            <div class=" col-xd col-6 ">
-              
-              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/pic4.png"  class="img-circle img-fluid" alt="Appartment" ></div>
+            <div class=" col-xd col-6 ">   
+              <div class="mx-auto col-lg-8 col-12"routerLink="/units"><img src="/assets/image/icons/pic4.png"  class="img-circle img-fluid" alt="Appartment" ></div>
           
             </div>
             <div class="col-xd col-6 ">
         
-              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/pic2.png"  class="img-circle img-fluid" alt="Commercial" ></div>
+              <div class="mx-auto col-lg-8 col-12"routerLink="/address"><img src="/assets/image/icons/pic2.png"  class="img-circle img-fluid" alt="Commercial" ></div>
           
             </div>
     </div>  
