--- a/src/app/client/revieworder/revieworder.component.html
+++ b/src/app/client/revieworder/revieworder.component.html
@@ -4,16 +4,99 @@
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Property Size </h4>
-        </div>
+    </div>
         <div class="row">
-          <div class="col-md-4 col-4 text-left">
-              <h5 class="text-white">BACK</h5>
-          </div>
-        </div>
-        </div>
-        </div>
+            <div class="col-md-4 col-4 text-left">
+                <button type="button" class="btn3 text-white">BACK</button>
+            </div>
+            <div class="col-md-4 col-4 text-center">
+                <h5>Subtotal:</h5>
+              </div>
+            <div class="col-md-4 col-4 text-right">
+                <button type="button" class="btn3 text-white">NEXT</button>
+            </div>
+       </div>
+</div>
+</div>
         <div class="row text-center mb-3">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
             <h3>All set?Please review your order below</h3>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-6 mx-auto">
+              <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+                <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-md-6 mx-auto">
+                  <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+              </div>
+          </div>
+          
+          <div class="row">
+              <div class="col-md-6 mx-auto">
+                  <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+              </div>
+            </div>
+          
+            <div class="row">
+                <div class="col-md-6 mx-auto">
+                    <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+                </div>
+              </div>
+            
+              <div class="row">
+                  <div class="col-md-6 mx-auto">
+                      <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+                  </div>
+                </div>
+              
+                <div class="row">
+                    <div class="col-md-6 mx-auto">
+                        <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+                    </div>
+                  </div>
+                
+            <div class="row">
+                <div class="col-md-6 mx-auto">
+                  <ul style="list-style-type:none">
+                      <li style="list-style-type:none"><p><img class="ordericon" src="/assets/image/icons/style.png"></p></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-6 mx-auto">
+                      <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+                  </div>
+                </div>
+              
+                <div class="row">
+                    <div class="col-md-6 mx-auto">
+                        <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+                    </div>
+                  </div>
+                
+                  <div class="row">
+                      <div class="col-md-6 mx-auto">
+                          <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+                      </div>
+                    </div>
+                  
+                    <div class="row">
+                        <div class="col-md-6 mx-auto">
+                            <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+                        </div>
+                      </div>
+                    
+                      <div class="row">
+                          <div class="col-md-6 mx-auto">
+                              <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
+                          </div>
+                        </div>
+                      >
