--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -15,12 +15,12 @@
     
    
           <div class="row  m-lg-3 m-md-5 my-5">
-            <div class="col-xd col-6 ">
+            <div class="col-xd col-6 sm-p-2">
               <div class="position-absolute" style="right:0"></div>
               <div class="mx-auto col-lg-8 col-12" routerLink="/placeorder"><img src="/assets/image/icons/p1.png" class="img-fluid" id="placeorder"></div>
           
             </div>
-            <div class="col-xd col-6 ">
+            <div class="col-xd col-6">
               <div class="position-absolute" style="right:0"></div>
               <div class="mx-auto col-lg-8 col-12" routerLink="/myorder"><img src="/assets/image/icons/p3.png" class="img-fluid" id="myorder"></div>
           
