--- a/src/app/client/invoice/invoice.component.html
+++ b/src/app/client/invoice/invoice.component.html
@@ -14,7 +14,8 @@
        </div>
 </div>
 </div>
-<div class="row">
+<div class="row text-center mb-3">
+ <div class="offset-md-3 col-md-6 col-xs-12 my-2">
   <div class="col-md-4 col-4">
     <p>jan 2</p>
   </div>
@@ -24,4 +25,5 @@
   <div class="col-md-4 col-4">
         <p>jan 2</p>
   </div>
+</div>
 </div>
