--- a/src/app/agent/agentregister/agentregister.component.html
+++ b/src/app/agent/agentregister/agentregister.component.html
@@ -9,12 +9,12 @@
 
       <mat-horizontal-stepper linear #stepper class="size w-100">
         <mat-step [stepControl]="firstFormGroup" [editable]="isEditable">
-          <form [formGroup]="firstFormGroup">
+          <form [formGroup]="firstFormGroup"  (ngSubmit)="agent(agentForm.value)" #agentForm="ngForm">
             <ng-template matStepLabel>Step 1</ng-template>
             <div class="row">
               <div class="col-xs-12 col-sm-6">
                 <mat-form-field class="w-100">
-                  <input matInput placeholder="Name" formControlName="fullName" required>
+                  <input matInput placeholder="Name" formControlName="fullName"  required>
                 </mat-form-field>
               </div>
               <div class="col-xs-12 col-sm-6">
@@ -65,7 +65,7 @@
                   <input matInput placeholder="9999" formControlName="phline">
                 </mat-form-field>
                 <br>
-                <button mat-flat-button matStepperNext>verify</button>
+                <button mat-flat-button matStepperNext>Next</button>
               </div>
             </div>
 
@@ -81,61 +81,6 @@
                   <input matInput placeholder="Street" formControlName="secondCtrl" required>
                 </mat-form-field>
               </div>
-<<<<<<< HEAD
-          
-      
-        </form>
-      </mat-step>
-      <mat-step [stepControl]="secondFormGroup" [editable]="isEditable">
-          <form [formGroup]="secondFormGroup">
-            <ng-template matStepLabel>Step 2</ng-template>
-            <div class="row">
-            <div class="col-xs-12 col-sm-12">
-                <mat-form-field class="w-100">
-                    <input matInput placeholder="Street" formControlName="secondCtrl" required >
-                </mat-form-field>
-            </div>
-          </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-4">
-                    <mat-form-field class="w-100">
-                        <input matInput placeholder=" City" formControlName="secondCtrl" required >
-                    </mat-form-field>
-                </div>
-                <div class="col-xs-12 col-sm-4">
-                    <mat-form-field class="w-100">
-                        <input matInput placeholder="State" formControlName="secondCtrl" required >
-                    </mat-form-field>
-                </div>
-                <div class="col-xs-12 col-sm-4">
-                    <mat-form-field class="w-100">
-                    <input matInput placeholder="ZIP code" formControlName="secondCtrl" required>
-                  </mat-form-field>      
-                  </div>
-              </div>
-          
-      <div class="row">
-        <button mat-flat-button matStepperNext class="mx-auto">Next</button>
-      </div>
-    </form>
-  </mat-step>
- 
-  <mat-step>
-    <ng-template matStepLabel>Step 3</ng-template>
-    <div class="row ml-1">
-      <mat-checkbox><a href="#">I accept the terms and conditions</a></mat-checkbox>
-   </div>
-
-    <div class="row" class="text-center mt-5">
-      <p >You are now done.</p>
-    </div>
-   
-  </mat-step>
-</mat-horizontal-stepper>
-</div>
-</div>
-</div>
-=======
             </div>
             <div class="row">
               <div class="col-xs-12 col-sm-4">
@@ -168,7 +113,7 @@
                     </div>
                   
                     <div class="row" class="text-center mt-5">
-                      <p>You are now done.</p>
+                     <button type="button"[disabled]="!agentForm.valid" class="btn-success">Submit</button>
                     </div>
                   
                   </mat-step>
@@ -176,4 +121,3 @@
                   </div>
                   </div>
                   </div>
->>>>>>> master
