--- a/src/app/client/addonv/addonv.component.html
+++ b/src/app/client/addonv/addonv.component.html
@@ -26,17 +26,17 @@
   </div>
   <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block " (click)="pushpcs($event, 'Community Shots')">Community Shots(+$50)</button>
+          <button  class="btn btn1 btn-lg btn-block " (click)="pushvcs($event, 'Community Shots')">Community Shots(+$50)</button>
       </div>
   </div>
   <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block " (click)="pushpcs($event, 'Twlight Shots')">Twlight Shots(+$50)</button>
+          <button  class="btn btn1 btn-lg btn-block" (click)="pushvts($event, 'Twlight Shots')">Twlight Shots(+$50)</button>
           </div>
   </div>
   <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-      <button type="button" class="btn btn1 btn-lg btn-block " (click)="pushpcs($event, 'Rush Fee')">Rush Fee(+$75)</button>
+      <button type="button" class="btn btn1 btn-lg btn-block"  (click)="pushvrf($event, 'Rush Fee')">Rush Fee(+$75)</button>
       </div>
   </div>
   <app-footer></app-footer>
