--- a/src/app/client/squarefeet/squarefeet.component.html
+++ b/src/app/client/squarefeet/squarefeet.component.html
@@ -2,60 +2,70 @@
 <div class="row">
   <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
     <div class="col-md-12">
-          <h3 class="text-center text-white">New Order > First Unit</h3>
-          <h4 class="text-center">Property Size </h4>
+          <h3 class="text-center text-white">{{title}}</h3>
+          <h4 class="text-center">{{(property | async)?.building}} Size </h4>
         </div>
         <div class="row">
           <div class="col-md-4 col-4 text-left">
-              <h5 class="text-white">BACK</h5>
+                <button class="btn btn-link m-3" routerLink="/address">
+                    BACK
+                  </button>
           </div>
           <div class="col-md-4 col-4 text-center">
               <h5>Subtotal:</h5>
             </div>
           <div class="col-md-4 col-4 text-right">
-            <h5 class="text-white">NEXT</h5>
+                <div *ngIf="(property|async)?.squarefeet===undefined;else valids">
+                        <button class="btn btn-link m-3" (click)="please()"></button>
+                    </div>
+            <ng-template #valids>
+                 <button routerLink="/product" class="btn btn-link m-3">NEXT</button>
+            </ng-template>
           </div>
         </div>
         </div>
         </div>
         <div class="row text-center mb-3">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+              <p>{{obj}}</p>
             <h3>How many square feet?</h3>
           </div>
         </div>
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">0-750 SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block" (click)="sqt('0-750')">0-750 SF</button>
       </div>
       </div>
       <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block ">751-1500 SF</button>
+            <div *ngIf="(property|async)?.squarefeet==='0-750';else valid0to750">
+             <button type="button" class="btn btn1 btn-sm btn-block" (click)="sqt('751-1500')">751-1500 SF</button>
+             </div>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block ">2251-3000 SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block" (click)="sqt('2251-3000')">2251-3000 SF</button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">3001-3750 SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block" (click)="sqt('3001-3750')">3001-3750 SF</button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">3751-4500 SF</button>
+          <button type="button" class="btn btn1  btn-sm btn-block" (click)="sqt('3751-4500')">3751-4500 SF</button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">4501-5250 SF </button>
+          <button type="button" class="btn btn1 btn-sm btn-block" (click)="sqt('4501-5250')">4501-5250 SF </button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">5251+ SF</button>
+          <button type="button" class="btn btn1 btn-sm btn-block" (click)="sqt('5251+')">5251+ SF</button>
             </div>
             </div>
             <app-footer></app-footer>
