--- a/src/app/client/access/access.component.html
+++ b/src/app/client/access/access.component.html
@@ -5,47 +5,31 @@
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Products </h4>
     </div>
-        <div class="row">
-          <div class="col-md-4 col-4 text-left">
-              <h5 class="text-white">BACK</h5>
-          </div>
-          <div class="col-md-4 col-4 text-center">
+    <div class="row">
+        <div class="col-md-4 col-4 text-left">
+            <button type="button" class="btn3 text-white">BACK</button>
+        </div>
+        <div class="col-md-4 col-4 text-center">
             <h5>Subtotal:</h5>
           </div>
-          <div class="col-md-4 col-4 text-right">
-            <h5 class="text-white">NEXT</h5>
-          </div>
+        <div class="col-md-4 col-4 text-right">
+            <button type="button" class="btn3 text-white">NEXT</button>
         </div>
+   </div>
   </div>
 </div>
-<div class="row text-center">
+<div class="row">
     <div class="offset-md-3 col-md-6 col-xs-12">
-      <h3>How will you access the property?</h3>
+      <h3 class="text-center">How will you access the property?</h3>
     </div>
-  </div>
+</div>
   <div class="row">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn-lg btn-block ">Meet agent on site</button>
-      </div>
-  </div>
-  <div class="row">
-          <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn-lg btn-block ">Lockbox</button>
-          </div>
-  </div>
-  <div class="row">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-      <button type="button" class="btn btn-lg btn-block ">Access Code</button>
-      </div>
-  </div>
-  <div class="row">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-      <button type="button" class="btn btn-lg btn-block ">Other</button>
-      </div>
-  </div>
-  <div class="row">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-5">
-      <button type="button" class="btn-lg btn-block btn1">Code?</button>
+      <div class="offset-md-3 col-md-6 col-xs-12 my-3">
+          <button type="button" class="btn btn1 btn-lg btn-block ">Meet agent on site</button>
+          <button type="button" class="btn btn1 btn-lg btn-block ">Lockbox</button>
+          <button type="button" class="btn btn1 btn-lg btn-block ">Access Code</button>
+          <button type="button" class="btn btn1 btn-lg btn-block ">Other</button>
+          <button type="button" class="btn btn-lg btn-block btn4 my-5">Code?</button>
       </div>
   </div>
   <app-footer></app-footer>
