--- a/src/app/client/units/units.component.html
+++ b/src/app/client/units/units.component.html
@@ -5,26 +5,26 @@
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Products </h4>
     </div>
-        <div class="row">
-          <div class="col-md-4 col-4 text-left">
-              <h5 class="text-white">BACK</h5>
-          </div>
-          <div class="col-md-4 col-4 text-center">
-            <h5>Subtotal:</h5>
-          </div>
-          <div class="col-md-4 col-4 text-right">
-            <h5 class="text-white">NEXT</h5>
-          </div>
+    <div class="row">
+      <div class="col-md-4 col-4 text-left">
+          <button type="button" class="btn3 text-white">BACK</button>
+      </div>
+      <div class="col-md-4 col-4 text-center">
+          <h5>Subtotal:</h5>
         </div>
+      <div class="col-md-4 col-4 text-right">
+          <button type="button" class="btn3 text-white">NEXT</button>
+      </div>
+   </div>
   </div>
 </div>
 <div class="row text-center">
-    <div class="offset-md-3 col-md-6 col-xs-12">
-      <h3>How many units are we serving at this proper</h3>
+    <div class="col-md-12 col-xs-12 text-center">
+      <h3>How many units are we serving at this property?</h3>
     </div>
   </div>
 <div class="row text-center">
-    <div class="offset-md-3 col-md-6 col-xs-12">
+    <div class="col-md-12 col-xs-12">
         <i class="fa fa-sort-up up"></i>
         <h2>5</h2>
         <i class="fa fa-sort-down down"></i>
