--- a/src/app/client/visitingtime/visitingtime.component.html
+++ b/src/app/client/visitingtime/visitingtime.component.html
@@ -4,18 +4,18 @@
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Pick a Time </h4>
-        </div>
-        <div class="row">
+    </div>
+    <div class="row">
           <div class="col-md-4 col-4 text-left">
-              <h5 class="text-white">BACK</h5>
+              <button type="button" class="btn3 text-white">BACK</button>
           </div>
           <div class="col-md-4 col-4 text-center">
               <h5>Subtotal:</h5>
             </div>
           <div class="col-md-4 col-4 text-right">
-            <h5 class="text-white">NEXT</h5>
+              <button type="button" class="btn3 text-white">NEXT</button>
           </div>
-        </div>
+     </div>
         </div>
         </div>
         <div class="row text-center mb-3">
@@ -25,27 +25,27 @@
         </div>
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">10:00 AM</button>
+          <button type="button" class="btn btn1 btn-lg btn-block">10:00 AM</button>
       </div>
       </div>
       <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block ">11:00 AM</button>
+          <button type="button" class="btn btn1 btn-lg btn-block ">11:00 AM</button>
           </div>
+      </div>
+      <div class="row">
+          <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+            <button type="button" class="btn btn1 btn-lg btn-block ">12:00 PM</button>
           </div>
+      </div>
+       <div class="row">
+         <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+             <button type="button" class="btn btn1 btn-lg btn-block">1:00 PM</button>
+          </div>
+        </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block ">12:00 PM</button>
-          </div>
-          </div>
-          <div class="row">
-              <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">1:00 PM</button>
-          </div>
-          </div>
-          <div class="row">
-              <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">2:00 PM</button>
+          <button type="button" class="btn btn1 btn-lg btn-block">2:00 PM</button>
           </div>
           </div>
       <app-footer></app-footer>
