--- a/src/app/client/access/access.component.css
+++ b/src/app/client/access/access.component.css
@@ -5,15 +5,19 @@ h4{
 h5{
     color:#D5D5D5;
 }
-.btn{
+.btn1{
     background-color:#F1875B;
     color:#fff;
 }
-.btn:hover{
+.btn1:hover{
     background-color: #D5D5D5;
     color:#000;
 }
-.btn1{
+.btn4{
     border: 2px solid;
     background-color:#fff;
+}
+.btn3{
+    background-color: transparent;
+    border: none;
 }
