--- a/src/app/client/addons/addons.component.css
+++ b/src/app/client/addons/addons.component.css
@@ -5,11 +5,15 @@ h4{
 h5{
     color:#D5D5D5;
 }
-.btn{
+.btn1{
     background-color:#F1875B;
     color:#fff;
 }
-.btn:hover{
+.btn1:hover{
     background-color: #D5D5D5;
     color:#000;
+}
+.btn3{
+    background-color: transparent;
+    border: none;
 }
