--- a/src/app/client/comments/comments.component.html
+++ b/src/app/client/comments/comments.component.html
@@ -5,17 +5,17 @@
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Products </h4>
     </div>
-        <div class="row">
-          <div class="col-md-4 col-4 text-left">
-              <h5 class="text-white">BACK</h5>
-          </div>
-          <div class="col-md-4 col-4 text-center">
-            <h5>Subtotal:</h5>
-          </div>
-          <div class="col-md-4 col-4 text-right">
-            <h5 class="text-white">NEXT</h5>
-          </div>
+    <div class="row">
+      <div class="col-md-4 col-4 text-left">
+          <button type="button" class="btn3 text-white">BACK</button>
+      </div>
+      <div class="col-md-4 col-4 text-center">
+          <h5>Subtotal:</h5>
         </div>
+      <div class="col-md-4 col-4 text-right">
+          <button type="button" class="btn3 text-white">NEXT</button>
+      </div>
+ </div>
   </div>
 </div>
 <div class="row text-center">
