--- a/src/app/client/footer/footer.component.html
+++ b/src/app/client/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="row fixed-bottom">
+<div class="row">
   <div class="col-md-12 text-center">
       <i class="fa fa-angle-up mx-auto"></i>
       <p>Slide to View Prices</p>
