--- a/src/app/client/invoice/invoice.component.html
+++ b/src/app/client/invoice/invoice.component.html
@@ -14,16 +14,19 @@
        </div>
 </div>
 </div>
-<div class="row text-center mb-3">
- <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-  <div class="col-md-4 col-4">
-    <p>jan 2</p>
-  </div>
-  <div class="col-md-4 col-4">
-      <p>jan 2</p>
-  </div>
-  <div class="col-md-4 col-4">
-        <p>jan 2</p>
-  </div>
-</div>
-</div>
+<div class="row">
+        <div class="col-md-4 col-4">
+            <p class="text-center my-3">jan 5</p>
+        </div>
+        <div class="col-md-4 col-4">
+            <p class="text-center my-3">jun 6</p>
+          </div>
+        <div class="col-md-4 col-4">
+            <p class="text-center my-3">sep 9</p>
+        </div>
+    </div>    
+<div class="row my-5">
+        <div class="offset-md-3 col-md-6 col-xs-12 my-5">
+        <button type="button" class="btn btn-lg btn-block my-5">Download</button>
+        </div>
+</div>       
