--- a/src/app/client/products/products.component.html
+++ b/src/app/client/products/products.component.html
@@ -5,17 +5,17 @@
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Products </h4>
     </div>
-        <div class="row">
-          <div class="col-md-4 col-4 text-left">
-              <h5 class="text-white">BACK</h5>
-          </div>
-          <div class="col-md-4 col-4 text-center">
-            <h5>Subtotal:</h5>
-          </div>
-          <div class="col-md-4 col-4 text-right">
-            <h5 class="text-white">NEXT</h5>
-          </div>
+    <div class="row">
+      <div class="col-md-4 col-4 text-left">
+          <button type="button" class="btn3 text-white">BACK</button>
+      </div>
+      <div class="col-md-4 col-4 text-center">
+          <h5>Subtotal:</h5>
         </div>
+      <div class="col-md-4 col-4 text-right">
+          <button type="button" class="btn3 text-white">NEXT</button>
+      </div>
+ </div>
   </div>
 </div>
         <div class="row text-center">
@@ -26,42 +26,42 @@
         </div>
         <div class="row offset-md-3">
             <div class="col-md-4 col-xs-12 my-2 py-md-2">
-               <button type="button" class="btn btn btn-md btn-block ">Photography</button>
+               <button type="button" class="btn btn btn-lg btn-block ">Photography</button>
             </div>
             <div class="col-md-4 col-xs-12 my-2 py-md-2">
-              <button type="button" class="btn btn btn-md btn-block "> Video Tour</button>
+              <button type="button" class="btn btn btn-lg btn-block "> Video Tour</button>
             </div>
         </div>
         <div class="row offset-md-3">
               <div class="col-md-4 col-xs-12 my-2 py-md-2">
-                <button type="button" class="btn btn btn-md btn-block ">360 Tour</button>
+                <button type="button" class="btn btn btn-lg btn-block ">360 Tour</button>
               </div>
               <div class="col-md-4 col-xs-12 my-2 py-md-2">
-                <button type="button" class="btn btn btn-md btn-block">Single Property Website</button>
+                <button type="button" class="btn btn btn-lg btn-block">Single Property Website</button>
               </div>
         </div>
         <div class="row offset-md-3">
               <div class="col-md-4 col-xs-12 my-2 py-md-2">
-                <button type="button" class="btn btn btn-md btn-block">Floor Plans(B&W)</button>
+                <button type="button" class="btn btn btn-lg btn-block">Floor Plans(B&W)</button>
               </div>
               <div class="col-md-4 col-xs-12 my-2 py-md-2">
-                <button type="button" class="btn btn btn-md btn-block">Floor Plans(Color) </button>
+                <button type="button" class="btn btn btn-lg btn-block">Floor Plans(Color) </button>
               </div>
         </div>
           <div class="row offset-md-3">
               <div class="col-md-4 col-xs-12 my-2 py-md-2">
-          <button type="button" class="btn btn btn-md btn-block">Floor Plans(Color+Furniture)</button>
+          <button type="button" class="btn btn btn-lg btn-block">Floor Plans(Color+Furniture)</button>
               </div>
           <div class="col-md-4 col-xs-12 my-2 py-md-2">
-            <button type="button" class="btn btn btn-md btn-block">Double-Sided Flyer</button>
+            <button type="button" class="btn btn btn-lg btn-block">Double-Sided Flyer</button>
               </div>
           </div>
           <div class="row offset-md-3">
               <div class="col-md-4 col-xs-12 my-2 py-md-2">
-                  <button type="button" class="btn btn btn-md btn-block">Brochure(8 Page)</button>
+                  <button type="button" class="btn btn btn-lg btn-block">Brochure(8 Page)</button>
               </div>
               <div class="col-md-4 col-xs-12 my-2 py-md-2">
-                  <button type="button" class="btn btn btn-md btn-block">Brochure(4 Page)</button>
+                  <button type="button" class="btn btn btn-lg btn-block">Brochure(4 Page)</button>
               </div>
           </div>
           
