--- a/src/app/client/units/units.component.css
+++ b/src/app/client/units/units.component.css
@@ -9,3 +9,8 @@ h5{
     font-size: 5rem;
     color: #f1875b;
 }
+.btn3{
+    background-color: transparent;
+    border: none;
+    border-radius: 0px;
+}
