--- a/src/app/client/updateorder/updateorder.component.html
+++ b/src/app/client/updateorder/updateorder.component.html
@@ -19,22 +19,14 @@
     </div>
 </div>
 <div class="row text-center mb-3">
-    <div class="offset-md-3 col-md-6 col-xs-12 my-5">
+    <div class="col-md-12 col-xs-12 my-5">
       <h3 class="orderhead">Your Order has been updated</h3>
       <p>To add another property or unit to your order,please choose New Order below.Otherwise submit this order.</p>
     </div>
 </div>
-<div class="row">
-  <div class="offset-md-3 col-md-6 col-xs-12 mt-5">
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 mt-5 my-3">
           <button type="button" class="btn btn1 btn-md btn-block">ADD ANOTHER UNIT</button>
+          <button type="button" class="btn btn2 btn-md btn-block">SUBMIT ORDER</button>
       </div>
     </div>
-    <div class="row">
-      <div class="offset-md-3 col-md-6 col-xs-12">
-        <button type="button" class="btn btn2 btn-md btn-block">SUBMIT ORDER</button>
-      </div>
-    </div>
-  </div>
-</div>
