--- a/src/app/admin/adminorderhistory/adminorderhistory.component.html
+++ b/src/app/admin/adminorderhistory/adminorderhistory.component.html
@@ -8,7 +8,7 @@
      </div>
      <div class="col-md-9 col-sm-12 my-2 bg-light">
          <div class="row ">
-           <div class="col-md-12 p-1 bg-white">
+           <div class="col-md-12 p-1 my-2 bg-white">
                <h3 class="text-dark">OrderHistory</h3>
            </div>
        
