--- a/src/app/agent/agentdashboard/agentdashboard.component.html
+++ b/src/app/agent/agentdashboard/agentdashboard.component.html
@@ -1,61 +1,45 @@
-<app-adminheader></app-adminheader>
-  
-<br>
+<app-navbar></app-navbar>
+<div class="row">
+  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-2">
+    <div class="col-md-12 p-2 ">
+      
+      <h3 class="text-center text-white">Welcome</h3>
+      <p class="text-center text-white">placeorder</p>
+   
+      
+    </div>
+  </div>
+</div>
+<div class="row">
+    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    
+   
+          <div class="row  m-lg-3 m-md-5 my-5">
+            <div class="col-xd col-6 ">
+              <div class="position-absolute px-3" style="right:0"></div>
+              <div class="mx-auto col-lg-8 col-12"><img src="/assets/image/icons/ap1.png" class="img-fluid" id="placeorder"></div>
+          
+            </div>
+            <div class="col-xd col-6 ">
+              <div class="position-absolute px-3" style="right:0"></div>
+              <div class="mx-auto col-lg-8 col-12  "><img src="/assets/image/icons/ap3.png" class="img-fluid" id="myorder"></div>
+          
+            </div>
+          </div>
+          <div class="row m-lg-3 m-md-5 my-5">
+            <div class=" col-xd col-6 ">
+                <div class="position-absolute px-3" style="right:0"><div class="circle">11</div></div>
+                <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/p5.png" class="img-fluid" id="myaccount"></div>
+          
+            </div>
+            <div class="col-xd col-6 ">
+              <div class="position-absolute px-3" style="right:0"><div class="circle">1</div></div>
+              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/p7.png" class="img-fluid" id="delivery"></div>
+          
+            </div>
+    </div>  
+</div>
+</div>
+    
 
-<div class="row mt-4 ">
-   <div class="d-none d-md-block d-lg-block d-xl-block col-md-3  sidenav">
-       <app-adminsidenav></app-adminsidenav>
-   </div>
-   <div class="col-md-9 col-sm-12 my-2 bg-dark">
-    <div class="row mt-5">
-        <div class="col-md-6 col-lg-3">
-            <a class="nav-link" routerLink="/aduser" >
-          <div class="widget-small primary coloured-icon">
-             
-            <i class="icon fa fa-users fa-3x"></i>
-            
-            <div class="info">
-             <h4 routerLink="/aduser">Users</h4>
-            <p><b>5</b></p>
-            </div>
-          </div>
-          </a>
-        </div>
-        <div class="col-md-6 col-lg-3"><a class="nav-link" routerLink="/adorders" >
-          <div class="widget-small info coloured-icon">
-              
-            <i class="icon fa fa-first-order fa-3x"></i>
-            
-            <div class="info">
-              <h4>Orders</h4>
-              <p><b>25</b></p>
-            </div>
-          </div>
-          </a>
-        </div>
-        <div class="col-md-6 col-lg-3"><a class="nav-link" routerLink="/users" >
-          <div class="widget-small warning coloured-icon">
-              
-            <i class="icon fa fa-user-circle   fa-3x"></i>
-            
-            <div class="info">
-              <h4>Admin</h4>
-              <p><b>10</b></p>
-            </div>
-          </div></a>
-        </div>
-        <div class="col-md-6 col-lg-3">
-            <a class="nav-link" routerLink="/adpayment" >
-          <div class="widget-small danger coloured-icon">
-              
-                <i class="icon fa fa-credit-card fa-3x"></i>
-             
-            <div class="info">
-              <h4>Payment</h4>
-              <p><b>500</b></p>
-            </div>
-          </div> </a>
-        </div>
-      </div>
-</div>
-</div>
+<app-footer></app-footer>
