--- a/src/app/client/editprofile/editprofile.component.html
+++ b/src/app/client/editprofile/editprofile.component.html
@@ -1,3 +1,96 @@
-<p>
-  editprofile works!
-</p>
+
+<div class="row">
+  <nav class="navbar navbar-expand-md navbar-light offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav mx-auto my-2 nav-fill w-75">
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/main">Main</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/">Price Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/placeorder">Place Order</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/myorder">My Orders</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/aglogin">Agent</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/adlogin">Admin</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/profile">Profile </a>
+              </li>  
+              
+        </ul>
+      </div> 
+      
+    </nav>
+    
+    </div>
+    <div class="row">
+      <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+        <div class="col-md-12">
+        <div class="col-md-10">              
+          <h5>EditProfile</h5>
+        </div>
+        <div class="col-md-2">      
+          <h5>Save</h5>
+        </div>      
+              
+        </div>
+      </div>
+    </div>
+<div class="row">
+  <div class="col-md-12 col-12 text-center">
+    <img src="assets/image/icons/profile.png">
+  </div>
+</div>
+ <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="form-group row">
+    <label for="text-input" class="col-4 col-form-label">Name</label>
+    <div class="col-8">
+      <label for="text-input">Linda Green</label>
+    </div>
+  </div>
+    <hr>
+    <div class="form-group row">
+        <label for="email-input" class="col-4 col-form-label">Email</label>
+        <div class="col-8">
+          <label for="text-input">yourname@domain.com</label>
+        </div>
+      </div>
+        <hr>
+        <div class="form-group row">
+            <label for="text-input" class="col-4 col-form-label">Brokerage</label>
+            <div class="col-8">
+              <label for="text-input">Your Real Estate Company</label>
+            </div>
+          </div>
+            <hr>
+            <div class="form-group row">
+                <label for="text-input" class="col-4 col-form-label">My phone number</label>
+                <div class="col-8">
+                  <label for="text-input">(-)--- - ----</label>
+                </div>
+    
+              </div>
+                <hr>
+                <div class="form-group row">
+                    <label for="text-input" class="col-5 col-form-label">Payment info:  <span>Not set up yet</span></label>
+                    <div class="col-7">
+                      <button type="button" class="btn btn1">Set Up</button>
+               </div>
+                  </div>
+                    <hr>
+                    
+                    </div>
+                    
+    
