--- a/src/app/admin/adminheader/adminheader.component.html
+++ b/src/app/admin/adminheader/adminheader.component.html
@@ -1,16 +1,42 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg fixed-top navdes" #mainNav>
     <a class="navbar-brand text-white" >Agent-sync</a>
+    <ul class="navbar-nav ml-auto mt-3  mx-5 pl-5" id="logo1"> 
+      <li class="nav-item">
+    <a  class="nav-link" href="#" data-toggle="modal" data-target="#logoutModal">
+        <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+        
+  </li>
+</ul>
 
      
-      <ul class="navbar-nav ml-auto">
-             
-        
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/admin-login">
-            <i class="fa fa-fw fa-sign-out"></i>Logout</a>
-        </li>
-      </ul>
   </nav>
+<!-- Small modal -->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1>Hi</h1>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+      </div>
+      <div class="modal-body">
+        <p><!-- <i class="fa fa-question-circle"></i> --> Are you sure you want to log-off? <br /></p>
+      </div>
+      <div class="modal-footer">
+              <div class="actionsBtns">
+            <form action="/logout" method="post">
+                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+                <input type="submit" class="btn btn6  mx-2 navdes"  data-dismiss="modal" value="Yes" />
+                  <button class="btn btn5 "  data-dismiss="modal">Cancel</button>
+
+
+
+            </form>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            
 
   
