--- a/src/app/admin/adminorder/adminorder.component.html
+++ b/src/app/admin/adminorder/adminorder.component.html
@@ -8,7 +8,7 @@
      </div>
      <div class="col-md-9 col-sm-12 my-3 bg-light">
          <div class="row ">
-           <div class="col-md-12 p-0 bg-white">
+           <div class="col-md-12 p-0 my-2 bg-white">
                <h3 class="text-dark">Orders</h3>
            </div>
        
