--- a/src/app/admin/adminsidenav/adminsidenav.component.html
+++ b/src/app/admin/adminsidenav/adminsidenav.component.html
@@ -22,7 +22,7 @@
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Orders">
-          <a class="nav-link" routerLink="/admin-orders">
+          <a class="nav-link" routerLink="/adorderhistory">
             <i class="fa fa-first-order text-white"></i>
             <span class="nav-link-text text-white">Orders History</span>
           </a>
