--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -1,33 +1,36 @@
 
 <div class="row">
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <nav class="navbar navbar-expand-md bgdark navbar-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
     
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav mx-auto my-2 nav-fill w-75">
+          <ul class="navbar-nav mx-auto my-2 nav-fill w-100 px-5">
               <li class="nav-item">
-                  <a class="nav-link" routerLink="/main">Main</a>
+                  <a class="nav-link text-white" routerLink="/main">Main</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/">Price Menu</a>
+                  <a class="nav-link text-white" routerLink="/">Price Menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/placeorder">Place Order</a>
+                  <a class="nav-link text-white" routerLink="/placeorder">Place Order</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/myorder">My Orders</a>
+                  <a class="nav-link text-white" routerLink="/myorder">My Orders</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/aglogin">Agent</a>
+                  <a class="nav-link text-white" routerLink="/aglogin">My Account</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/adlogin">Admin</a>
+                  <a class="nav-link text-white" routerLink="/adlogin">Deliveries</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/profile">Profile </a>
-                </li>  
+                  <a class="nav-link text-white" routerLink="/profile">Profile </a>
+                </li> 
+                <li class="nav-item">
+                  <a class="nav-link text-white" routerLink="/profile">Logout</a>
+                </li>
                 
           </ul>
         </div> 
