--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Lato');
+body {  font-family: 'Lato', sans-serif !important ;}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
+    font-size: inherit;
 
-body {  font-family: 'Lato'; }
+}
+.bgdark{
+    background-color: #636363 !important;
+  
+}
+@media only screen and (max-width: 320px) {
+    h2, .h2{
+        font-size: 1.25rem !important;
+    }
+    h3, .h3{
+        font-size: 1rem !important;
+        margin-bottom:.5rem;
+    
+    }
+     h4, .h4{
+        font-size: .85rem !important;
+    
+    }
+       h5, .h5{
+        font-size: .75rem !important;
+    }
+}
