--- a/src/app/client/squarefeet/squarefeet.component.html
+++ b/src/app/client/squarefeet/squarefeet.component.html
@@ -1,17 +1,15 @@
 <app-navbar></app-navbar>
 <div class="row">
   <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-    <div class="col-md-12">
-       <div class="col-md-4 col-4 text-left">
-           <button type="button" class="btn3 text-white" [routerLink]="['/address']" routerLinkActive="router-link-active" >BACK</button>
-       </div>
-         
-       </div>
-       <div class="col-md-4 col-4 text-right">
-            <button type="button" class="btn3 text-white" (click)="checksqft()">NEXT</button>
-       </div>
+    <div class="row">
+        <div class="col-12">
+
+          <button type="button" class="btn3 text-white" [routerLink]="['/address']" routerLinkActive="router-link-active">BACK</button>
+        
+          <button type="button" class="btn3 text-white float-right" (click)="checksqft()">NEXT</button>
+        </div>
     </div>
-   </div>
+  </div> 
 </div>
 <div class="row text-center"> 
           <div class="offset-md-3 col-md-6 offset-sm-3 col-sm-6 col-xs-12">
