incompleted in addonsp

--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="row">
-  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-2">
+  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-2">
     <div class="col-md-12 p-2 ">
       <h3 class="text-center text-white">Welcome , {{auth.displayName | titlecase}}!</h3>
   
