--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -1,3 +1,37 @@
-<p>
-  visitingdate works!
-</p>
+<app-navbar></app-navbar>
+<div class="row">
+  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="col-md-12">
+      <h3 class="text-center text-white">New Order > First Unit</h3>
+      <h4 class="text-center">Pick a Date </h4>
+    </div>
+  </div> 
+  <form class="row" #visitingdatefg="ngForm" (ngSubmit)="Onvisitingsubmit(visitingdatefg)">
+    <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+      <div class="row">
+        <div class="col-md-4 col-4 text-left">
+          <button type="button" class="btn btn-link text-white" [routerLink]="['/access']" routerLinkActive="router-link-active"
+            routerLinkActive="router-link-active">BACK</button>
+        </div>
+        <div class="col-md-4 col-4 text-center">
+          <h5>Subtotal:<span class="sp">{{orderprice}}</span></h5>
+        </div>
+        <div class="col-md-4 col-4 text-right">
+          <button type="button" type="submit" class="btn btn-link text-white">NEXT</button>
+        </div>
+      </div>
+       
+    </div>
+    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 py-5 ">
+      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+        <mat-form-field class="example-full-width">
+          <input name="visitingdate" matInput ngModel #visitingdate="ngModel" [matDatepickerFilter]="myFilter"  [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date" >
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker touchUi #picker (selectedChanged)="formatDate($event)"></mat-datepicker>
+        </mat-form-field>
+
+      </div>
+
+    </div>
+  </form>
+<app-footer></app-footer>
